mediawiki.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mediawiki
  labels:
    app: mediawiki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mediawiki
  template:
    metadata:
      labels:
        app: mediawiki
    spec:
      containers:
        - image: gcr.io/mediawiki-199619/mediawikimysql
          name: mediawiki
          ports:
            - containerPort: 80
              name: mediawiki
              ## volumeMounts:
              ##- name: mediawiki-persistent-storage
              ##mountPath: /var/www/html
              ##    volumes:
              ##- name: mediawiki-persistent-storage
              ##gcePersistentDisk:
              ## pdName: mediawiki-disk
              ##fsType: ext4
