mysql.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: mediawiki
    name: mysql
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
      name: mysql
      tier: backend
  template:
    metadata:
      labels:
        app: mysql
        name: mysql
        tier: backend
    spec:
      containers:
        - image: mysql:5.6
          name: mysql
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-storage
          gcePersistentDisk:
            pdName: mysql-disk
            fsType: ext4
