nginx.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: nginx
  labels: 
    app: mediawiki
spec:
  selector:
    matchLabels:
      run: nginx
  replicas: 2
  template:
    metadata:
      labels:
        run: nginx
    spec:
      containers:
      - name: nginx
        image: gcr.io/mediawiki-199619/nginx
        ports:
        - containerPort: 80
