mediawiki-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mediawiki
  name: mediawiki
spec:
  type: ClusterIP      #type: LoadBalancer
  ports:
    - port: 80
      #      targetPort: 80
      #protocol: TCP
  selector:
    app: mediawiki
