mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: mediawiki
spec:
  type: ClusterIP
  ports:
    - port: 3306
  selector:
    app: mysql
