nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mediawiki
  name: nginx
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: mediawiki
