threeTierService.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: mediawiki
spec:
  type: ClusterIP
  ports:
    - port: 3306
  selector:
    app: mysql



apiVersion: v1
kind: Service
metadata:
  labels:
    app: mediawiki
  name: mediawiki
spec:
  type: ClusterIP      #type: LoadBalancer
  ports:
    - port: 80
      #      targetPort: 80
      #protocol: TCP
  selector:
    app: mediawiki
  env:
    - name: MYSQLIP
      valueFrom:
       fieldRef:
        fieldPath: mysql.ip



apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: mediawiki
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: mediawiki
