networkPolicy.yaml
kind: NetworkPolicy

apiVersion: networking.k8s.io/v1

metadata:

  name: access-nginx

spec:

  podSelector:

    matchLabels:

      name: mysql

  ingress:

  - from:

    - podSelector:

        matchLabels:

          name: mediawiki
